# botpress-ai

./: .env.example  .env.local.example  .gitattributes  .gitignore  SECURITY.md  next.config.ts  package-lock.json  package.json  supabase-email-templates.html  supabase-realtime-setup.sql  supabase-schema.sql  tsconfig.tsbuildinfo  vercel.json
.claude/: launch.json
.github/workflows/: ci.yml
public/: mockup.html  widget.js
scripts/: gcloud-complete.mjs  gcloud-consent.mjs  gcloud-fill.mjs  gcloud-final.mjs  gcloud-setup.mjs  gcloud-setup2.mjs
src/app/: global-error.tsx  globals.css  layout.tsx  page.tsx
src/app/(admin)/: error.tsx  layout.tsx  loading.tsx
src/app/(auth)/: error.tsx
src/app/(dashboard)/: error.tsx  layout.tsx  loading.tsx
src/app/onboarding/: page.tsx
src/hooks/: use-auth.ts  use-business.ts  use-realtime-escalations.ts
src/i18n/: ar.ts  en.ts  he.ts  index.ts  provider.tsx
src/lib/: api-response.ts  auth.ts  encryption.ts  llm-guard.ts  notifications.ts  rate-limit.ts  sanitize.ts  sentry.ts  widget-token.ts
src/services/: ai-engine.ts  channel-service.ts  email-template.ts  faq-matcher.ts  prompt-builder.ts  prompt-cache.ts  quick-responses.ts  summary-template.ts
src/types/: database.ts
tools/db-validator/: validate.py
tools/health-monitor/: README.md  checker.go  dashboard.go  go.mod  main.go
tools/rate-limiter/: README.md  config.go  go.mod  handlers.go  limiter.go  main.go
tools/summary-cron/: README.md  email_template.py  summary.py
tools/wasm-lookup/: Cargo.toml  README.md
tools/wasm-lookup/src/: lib.rs
(+68 files in other folders)
