[package]
name = "wasm-lookup"
version = "0.1.0"
edition = "2021"
description = "Fast in-memory business index for O(1) lookup by phone, email, or domain"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
